--- a/ana_testimonial.html
+++ b/ana_testimonial.html
@@ -31,20 +31,26 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Ana pineda</p>
-					<p><strong>Age:</strong> 21</p>
-					<p><strong>Country:</strong> Mexico</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Ana pineda</p>
+					<p class="txt"><strong>Age:</strong> 21</p>
+					<p class="txt"><strong>Country:</strong> Mexico</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
 				<br>
 					<p class="txt-justify">First I would like to give thanks to this website because it helped me when no one else did. It gave me information and was safe and private. I admit that in the beginning I felt a lot of mistrust. In the end it was a huge support for me because before I found safe2choose other websites did not support me and gave me very little information. I was 8 weeks pregnant when I decided to have an abortion. It was very difficult for me but I went through with it because I was and I still am confident that it was the best choice for me – for my economic situation, family and schooling. I took 12 pills total. I threw up after the first dose, had diarrhea and very strong cramps in the beginning. 5 hours later I began to bleed and 3 days later after taking the pills I was able to see the embryo. I didn’t feel as bad as I thought I would, it was more like a long period because I bleed more or less for 6 weeks. It was not necessary for me to go to the hospital, but I did have a check up with my gynecologist. My boyfriend supported me throughout the process and I think it’s very important to have someone there with you. Everything was safe and private. For me, my abortion process affected me more emotionally than physically – I always think about it and know that it was not the right time for me to have kids, but one day I will. If you are sure that you want to have an abortion you are in good hands with safe2choose, and I speak from experience. 4 months have passed and I’m doing well.</p>
 					<br>
-					<h2>9th September, 2016</h2>
+					<h3>9th September, 2016</h3>
+				</div>
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
 				</div>				
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
@@ -79,7 +85,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -87,12 +93,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
-				    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
