--- a/edeltraud_testimonial.html
+++ b/edeltraud_testimonial.html
@@ -31,21 +31,27 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Edeltraud Hannelore</p>
-					<p><strong>Age:</strong> 20</p>
-					<p><strong>Country:</strong> Germany</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Edeltraud Hannelore</p>
+					<p class="txt"><strong>Age:</strong> 20</p>
+					<p class="txt"><strong>Country:</strong> Germany</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
 				<br>
 					<p class="txt-justify">My experience was great. I was really scared and desperate and safe2choose staff actually understood me and helped me a lot. I asked questions by email and they replied quickly. I felt comfortable to go on with the process. I did a donation and in less than a week I received the package. I did the procedure and everything went very well. If I can advise anyone about the pain, here is a tip: do not do it alone, you might need some help and assistance for a couple of hours. I did it by myself and it was fine. But if there is someone you can count on, two is even better. Thank you so much safe2choose for being there for us. I am really grateful to know that we are not alone. I’ll definitely recommend and share that we can trust you. Thank you!</p>
 					<br>
-					<h2>4th March, 2016</h2>
-				</div>				
+					<h3>4th March, 2016</h3>
+				</div>
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
+				</div>							
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -79,7 +85,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -87,12 +93,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="linda_testimonial.html" class="pagination1">Linda's testimonial</a></li>
-				    <li><a href="sarabi_testimonial.html" class="pagination1">Sarabi's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
