--- a/sarabi_testimonial.html
+++ b/sarabi_testimonial.html
@@ -31,13 +31,11 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Sarabi Bantsimba</p>
-					<p><strong>Age:</strong> 32</p>
-					<p><strong>Country:</strong> South Africa</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Sarabi Bantsimba</p>
+					<p class="txt"><strong>Age:</strong> 32</p>
+					<p class="txt"><strong>Country:</strong> South Africa</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
@@ -45,8 +43,16 @@
 					<p class="txt-justify">I’m happy to have discovered this option and to know that you inform women and care to help; no one does this. In Mexico, we need people that will provide support in these cases, and I believe that you do it well.</p>
 					<p class="txt-justify">I felt better after contacting you.</p>
 					<br>
-					<h2>Date: 11th June, 2016</h2>
-				</div>				
+					<h3>Date: 11th June, 2016</h3>
+				</div>	
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
+				</div>						
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -80,7 +86,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -88,12 +94,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="edeltraud_testimonial.html" class="pagination1">Edeltraud's testimonial</a></li>
-				    <li><a href="kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
