--- a/sophia_testimonial.html
+++ b/sophia_testimonial.html
@@ -31,21 +31,27 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Sophia Johnson</p>
-					<p><strong>Age:</strong> 19</p>
-					<p><strong>Country:</strong> USA</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Sophia Johnson</p>
+					<p class="txt"><strong>Age:</strong> 19</p>
+					<p class="txt"><strong>Country:</strong> USA</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
 				<br>
 					<p class="txt-justify">I have never dealt with more caring, understanding and helpful people in all my life. I would recommend this service to anyone that is in this difficult situation. I was very sceptical about ordering over the Internet but safe2choose made this experience as smooth as possible. I stayed at home with a friend who supported me. The pain got quite intense but with the information I was given with the tablets let me know what to expect and gave me options on how to deal with it all. I advise for anyone that uses this method to read the information that safe2choose give you, it really does help.</p>
 					<br>
-					<h2>23rd August, 2016</h2>
-				</div>				
+					<h3>23rd August, 2016</h3>
+				</div>		
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
+				</div>					
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -79,7 +85,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -87,12 +93,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="ana_testimonial.html" class="pagination1">Ana's testimonial</a></li>
-				    <li><a href="linda_testimonial.html" class="pagination1">Linda's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
