--- a/kumiko_testimonial.html
+++ b/kumiko_testimonial.html
@@ -31,13 +31,11 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Kumiko Lee</p>
-					<p><strong>Age:</strong> 27</p>
-					<p><strong>Country:</strong> China</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Kumiko Lee</p>
+					<p class="txt"><strong>Age:</strong> 27</p>
+					<p class="txt"><strong>Country:</strong> China</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
@@ -47,8 +45,16 @@
 					<p class="txt-justify">You did not judge me, but instead you provided me with a list of safe organisations which offered safe termination. Even after termination you provided immense support by checking on how i was doing emotionally. No words can ever describe my encounter with you, my partner and i will be forever grateful.</p>
 					<p class="txt-justify">I will not hesitate to refer your services to other women (especially in Africa and other countries where abortion is illegal) who may find themselves in the same predicament i was in. You are one in a million. Thank you so much once more.</p>
 					<br>
-					<h2>5th January, 2016</h2>
-				</div>				
+					<h3>5th January, 2016</h3>
+				</div>	
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
+				</div>					
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -82,7 +88,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -90,12 +96,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="sarabi_testimonial.html" class="pagination1">Sarabi's testimonial</a></li>
-				    <li><a href="ana_testimonial.html" class="pagination1">Ana's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
