--- a/linda_testimonial.html
+++ b/linda_testimonial.html
@@ -31,21 +31,27 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-8">
-					<p><strong>Name:</strong> Linda Hamilton</p>
-					<p><strong>Age:</strong> 26</p>
-					<p><strong>Country:</strong> United Kingdom</p>
+				<div class="col-sm-12 col-md-12 col-lg-12 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Name:</strong> Linda Hamilton</p>
+					<p class="txt"><strong>Age:</strong> 26</p>
+					<p class="txt"><strong>Country:</strong> United Kingdom</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12">
 				<br>
 				<br>
 					<p class="txt-justify">When I was worried with an unexpected pregnancy I reached out to safe2choose. They gave great information anytime I needed it- always checking in with me, giving me instructions, giving me peace of mind. I took the second set of pills (misoprostol) and within 30 minutes it started happening. I was at home home and felt very comfortable and had a sense of relief. I would recommend this site to anybody!</p>
 					<br>
-					<h2>23rd June, 2016</h2>
-				</div>				
+					<h3>23rd June, 2016</h3>
+				</div>		
+				<div class="pagination1">
+					<nav aria-label="...">
+			 			<ul class="pager">
+						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+			  			</ul>
+					</nav>
+				</div>						
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -79,7 +85,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -87,12 +93,6 @@
 		<div class="col-sm-12 col-md-12 col-lg-12">
 		<br>
 		<br>
-			<nav aria-label="...">
-	 			<ul class="pager">
-				    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
-				    <li><a href="Edeltraud_testimonial.html" class="pagination1">Edeltraud's testimonial</a></li>
-	  			</ul>
-			</nav>
 		</div>
 	</div>
 	<footer margin-top>
